# footballer_prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: const.py  experiment.py  predict.py  preprocessing.py  run.py  test.py  utils.py
tests/: test_predict_function.py  test_preprocessing.py
