[tool.poetry]
name = "football-project"
version = "0.1.0"
description = ""
authors = ["shimkoji <fgjku235@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.0.2"
notebook = "^7.2.1"
xgboost = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
numpy = "1.26.4"
tqdm = "^4.66.4"
mlflow = "2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
